# ankiview

./: .bumpversion.toml  .envrc  .gitignore  Makefile  README.md
.github/workflows/: build.yml
ankiview/: Cargo.toml
ankiview/examples/: check_note_notetype.rs  image-test.md  image-test.md.ori  inspect_notetypes.rs  sample-notes.md  test_blockquote_codeblock.rs
ankiview/src/: constants.rs  lib.rs  main.rs
ankiview/src/application/: mod.rs  note_deleter.rs  note_editor.rs  note_lister.rs  note_updater.rs  note_viewer.rs  profile.rs  tag_manager.rs
ankiview/src/cli/: args.rs
ankiview/src/domain/: error.rs  mod.rs  note.rs
ankiview/src/infrastructure/: anki.rs  mod.rs  note_template.rs  renderer.rs
ankiview/src/inka/: mod.rs
ankiview/src/inka/application/: card_collector.rs  mod.rs
ankiview/src/inka/cli/: mod.rs
ankiview/src/inka/domain/: card.rs  mod.rs
ankiview/src/inka/infrastructure/: config.rs  file_writer.rs  hasher.rs  media_handler.rs  mod.rs
ankiview/src/inka/infrastructure/markdown/: card_parser.rs  cloze_converter.rs  converter.rs  mathjax_plugin.rs  mod.rs  section_parser.rs
ankiview/src/ports/: html.rs  mod.rs
ankiview/src/util/: lock.rs  mod.rs  process.rs  testing.rs  text.rs
ankiview/tests/: test_anki.rs  test_cli.rs  test_collect.rs  test_html_presenter.rs  test_lock_detection.rs  test_main.rs  test_note_deleter.rs  test_note_json.rs  test_note_updater.rs  test_note_viewer.rs  test_tag_manager.rs
ankiview/tests/fixtures/: README.md  build_test_collection.rs  copy_golden_dataset.sh
ankiview/tests/fixtures/test_collection/: collection.anki2  prefs21.db
ankiview/tests/fixtures/test_collection/User 1/: collection.media.db2
ankiview/tests/helpers/: mod.rs
data/: prefs21.db  prefs21.db.backup
data/testuser/: deleted.txt  first.md
scripts/: anki_viewer.py  clean_media.py  manual-test.sh
