[package]
name = "ankiview"
version = "1.3.2"
edition = "2021"
authors = ["sysid <sysid@gmx.de>"]
description = "Fast Anki card viewer"
repository = "https://github.com/sysid/ankiview"
documentation = "https://docs.rs/ankiview"
keywords = ["anki", "cli"]
categories = ["command-line-utilities"]
readme = "../README.md"
license = "BSD-3-Clause"

[dependencies]
anki = { git = "https://github.com/ankitects/anki.git", tag = "25.02" }  # prevents from crates.io
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
ctor = "0.3.6"
dirs = "6.0.0"
html-escape = "0.2.13"
itertools = "0.14.0"
regex = "1.11.1"
rstest = "0.24.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32"
tempfile = "3.17.1"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# inka dependencies
pulldown-cmark = "0.12"
toml = "0.8"
sha2 = "0.10"
walkdir = "2.4"
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = "1.4"

[[bin]]
name = "build_test_collection"
path = "tests/fixtures/build_test_collection.rs"

[profile.release]
codegen-units = 1
lto = true
